--- a/commercial-brand/package.json
+++ b/commercial-brand/package.json
@@ -14,7 +14,7 @@
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
         "lucide-react": "^0.475.0",
-        "next": "latest",
+        "next": "^16.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.2.1"
