--- a/nside-template/package.json
+++ b/nside-template/package.json
@@ -13,7 +13,7 @@
         "framer-motion": "^11.0.0",
         "lenis": "^1.3.17",
         "lucide-react": "^0.475.0",
-        "next": "latest",
+        "next": "^16.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.2.1"
